<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="227dp"
    tools:layout_editor_absoluteY="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".MainActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/iconCost"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCostOfService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvServiceSatisfaction"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_service"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/cost_of_service"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />

        <RadioGroup
            android:id="@+id/rgTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb20pTip"
            android:orientation="vertical"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/tvServiceSatisfaction"
            app:layout_constraintTop_toBottomOf="@+id/tvServiceSatisfaction">

            <RadioButton
                android:id="@+id/rb20pTip"
                style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_service" />

            <RadioButton
                android:id="@+id/rb18pTip"
                style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_service" />

            <RadioButton
                android:id="@+id/rb15pTip"
                style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_service" />

            <RadioButton
                android:id="@+id/rbCustomTip"
                style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/custom_amount" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customTipLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/custom_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etCustomTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:layout_editor_absoluteX="179dp"
                    tools:layout_editor_absoluteY="259dp" />

            </com.google.android.material.textfield.TextInputLayout>


        </RadioGroup>

        <TextView
            android:id="@+id/tvRoundTip"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/round_up_tip"
            app:layout_constraintStart_toStartOf="@+id/rgTips"
            app:layout_constraintTop_toBottomOf="@id/rgTips" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchRoundTipToggle"
            style="@style/Widget.TipCalculator.CompoundButton.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvRoundTip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRoundTip" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calculate"
            app:layout_constraintTop_toBottomOf="@+id/tvRoundTip"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/tvTipAmount"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            app:layout_constraintEnd_toEndOf="@+id/btnCalculate"
            app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

        <ImageView
            android:id="@+id/iconCost"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service"
            app:srcCompat="@drawable/ic_paid_black_24dp" />

        <ImageView
            android:id="@+id/iconSatisfaction"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/tvServiceSatisfaction"
            app:layout_constraintEnd_toEndOf="@+id/iconCost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
            app:srcCompat="@drawable/ic_sentiment_very_satisfied_black_24dp" />

        <ImageView
            android:id="@+id/iconRoundUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/tvRoundTip"
            app:layout_constraintEnd_toStartOf="@+id/tvServiceSatisfaction"
            app:layout_constraintStart_toStartOf="@+id/iconSatisfaction"
            app:layout_constraintTop_toTopOf="@+id/tvRoundTip"
            app:srcCompat="@drawable/ic_trending_up_black_24dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>